[project]
name = "sbuebak-scraper"
version = "0.1.0"
description = "Scraper for VK community extracting posts and music"
requires-python = ">=3.13"
dependencies = [
    "selenium==4.41.0",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
]

[project.scripts]
scraper = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
